feat: layer 1 normalement complete
